<resources>
    <string name="app_name">Bubble Map</string>
    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>
    <string name="action_settings">Settings</string>

    <!-- App navigation -->

    <string name="menu_section_map">Карта</string>

    <string name="menu_home">Все публикации</string>

    <string name="menu_section_my_account">Аккаунт</string>

    <string name="menu_my_account">Мой аккаунт</string>
    <string name="menu_followers">Мои читатели</string>
    <string name="menu_following">Мои подписки</string>

    <string name="menu_login">Вход</string>
    <string name="menu_register">Регистрация</string>

    <string name="menu_section_application">Приложение</string>

    <string name="menu_settings">Настройки</string>
    <string name="menu_about">О приложении</string>

    <!-- Login -->
    <string name="login_email">E-mail или имя пользователя</string>
    <string name="login_password">Пароль</string>
    <string name="login_action">Войти</string>

    <!-- Register -->

    <string name="register_email">E-mail:</string>
    <string name="register_email_hint">Введите Ваш e-mail</string>
    <string name="register_username">Имя пользователя:</string>
    <string name="register_username_hint">Введите имя пользователя</string>
    <string name="register_password">Пароль:</string>
    <string name="register_password_hint">Введите пароль</string>
    <string name="register_password2">Повторите пароль:</string>
    <string name="register_password2_hint">Введите пароль ещё раз</string>
    <string name="register_action">Зарегистрироваться</string>

    <string-array name="register_sex_spinner">
        <item>м</item>
        <item>ж</item>
    </string-array>

    <string name="settings_logout">Очистить данные входа и выйти</string>

    <string name="menu_publish_post">Опубликовать запись</string>


    <string name="publish_post_title">Заголовок поста:</string>
    <string name="publish_post_title_placeholder">Введите заголовок поста</string>
    <string name="publish_post_tag">Категория поста:</string>
    <string-array name="publish_post_tags">
        <item>Жизненные заметки</item>
        <item>Хобби</item>
        <item>Сделай сам (DIY)</item>
        <item>Проект</item>
        <item>Стиль</item>
        <item>Искусство</item>
        <item>IT</item>
        <item>Игры</item>
        <item>Другое</item>
    </string-array>
    <string name="publish_post_image">Картинка поста:</string>

    <string name="publish_post_image_dialog_title">Выберите картинку поста</string>
    <string name="publish_post_image_dialog_choose">Выбрать</string>
    <string name="publish_post_image_dialog_cancel">Отмена</string>

    <string name="publish_post_editor_text">Содержание поста:</string>
    <string name="publish_post_action_text">Опубликовать</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="view_post_title">Просмотр</string>

</resources>
