<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- Map section -->

    <item android:title="@string/menu_section_map">
        <menu android:checkableBehavior="single">
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_map_black_24dp"
                android:title="@string/menu_home" />
        </menu>
    </item>

    <!-- Authorized -->
    <item android:title="@string/menu_section_my_account" android:checkableBehavior="single" android:id="@+id/nav_my_account_authorized_section">
        <menu>
            <item
                android:id="@+id/nav_my_account"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/menu_my_account" />
            <!--
            <item
                android:id="@+id/nav_following"
                android:icon="@drawable/ic_rss_feed_black_24dp"
                android:title="@string/menu_following" />
            <item
                android:id="@+id/nav_followers"
                android:icon="@drawable/ic_stars_black_24dp"
                android:title="@string/menu_followers" />
                -->
        </menu>
    </item>

    <!-- Unauthorized -->
    <item android:title="@string/menu_section_my_account" android:checkableBehavior="single" android:id="@+id/nav_my_account_unauthorized_section">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/menu_login" />
            <item
                android:id="@+id/nav_register"
                android:icon="@drawable/ic_person_add_black_24dp"
                android:title="@string/menu_register" />
        </menu>
    </item>

    <!-- Application section -->
    <item android:title="@string/menu_section_application" android:checkableBehavior="single">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
