<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.yageorgiy.bubblemap.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_account"
        android:name="com.yageorgiy.bubblemap.ui.myaccount.MyAccountFragment"
        android:label="@string/menu_my_account"
        tools:layout="@layout/my_account_fragment" />

    <fragment
        android:id="@+id/nav_following"
        android:name="com.yageorgiy.bubblemap.ui.following.FollowingFragment"
        android:label="@string/menu_following"
        tools:layout="@layout/following_fragment" />

    <fragment
        android:id="@+id/nav_followers"
        android:name="com.yageorgiy.bubblemap.ui.followers.FollowersFragment"
        android:label="@string/menu_followers"
        tools:layout="@layout/followers_fragment" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.yageorgiy.bubblemap.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/login_fragment" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.yageorgiy.bubblemap.ui.register.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/register_fragment" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.yageorgiy.bubblemap.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/register_fragment" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.yageorgiy.bubblemap.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/about_fragment" />

</navigation>