<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

    <ScrollView
        android:id="@+id/scrollPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_email"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/register_email_hint"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/usernameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_username"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:id="@+id/my_account_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/register_username_hint"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/register_password_hint"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/password2Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_password2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/register_password2_hint"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Пол:"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <Spinner
                android:id="@+id/sexSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/register_sex_spinner" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_action" />

            <TextView
                android:id="@+id/errorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#FF0000" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
